src/grammar/ABCMusicParser.java
// Generated from ABCMusic.g4 by ANTLR 4.0

package grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ABCMusicParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NUMBER_LABEL=1, TITLE_LABEL=2, COMPOSER_LABEL=3, LENGTH_LABEL=4, VOICE_LABEL=5, 
		METER_LABEL=6, TEMPO_LABEL=7, KEY_LABEL=8, LYRIC_LABEL=9, NUMBER=10, TITLE=11, 
		COMPOSER=12, LENGTH=13, VOICE=14, F_METER=15, F_TEMPO=16, F_KEY=17, LYRIC=18, 
		ACCIDENTAL=19, BASE_NOTE=20, REST=21, DUPLET_SPEC=22, TRIPLET_SPEC=23, 
		QUADRUPLET_SPEC=24, OCTAVE=25, TEMPO=26, DURATION=27, BARLINE=28, OPENPAREN=29, 
		CLOSEPAREN=30, NTH_REPEAT=31, KEY_ACCIDENTAL=32, MODE_MINOR=33, COMMENT=34, 
		WHITESPACE=35, END_OF_LINE=36;
	public static final String[] tokenNames = {
		"<INVALID>", "NUMBER_LABEL", "TITLE_LABEL", "COMPOSER_LABEL", "LENGTH_LABEL", 
		"VOICE_LABEL", "METER_LABEL", "TEMPO_LABEL", "KEY_LABEL", "LYRIC_LABEL", 
		"NUMBER", "TITLE", "COMPOSER", "LENGTH", "VOICE", "F_METER", "F_TEMPO", 
		"F_KEY", "LYRIC", "ACCIDENTAL", "BASE_NOTE", "'z'", "DUPLET_SPEC", "TRIPLET_SPEC", 
		"QUADRUPLET_SPEC", "OCTAVE", "TEMPO", "DURATION", "BARLINE", "'['", "']'", 
		"NTH_REPEAT", "KEY_ACCIDENTAL", "'m'", "COMMENT", "WHITESPACE", "END_OF_LINE"
	};
	public static final int
		RULE_tune = 0, RULE_piece = 1, RULE_header = 2, RULE_music = 3, RULE_line = 4, 
		RULE_measure = 5, RULE_element = 6, RULE_note_or_rest = 7, RULE_note_element = 8, 
		RULE_rest_element = 9, RULE_chord = 10, RULE_tuplet = 11, RULE_duplet = 12, 
		RULE_triplet = 13, RULE_quadruplet = 14;
	public static final String[] ruleNames = {
		"tune", "piece", "header", "music", "line", "measure", "element", "note_or_rest", 
		"note_element", "rest_element", "chord", "tuplet", "duplet", "triplet", 
		"quadruplet"
	};

	@Override
	public String getGrammarFileName() { return "ABCMusic.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


	    // This method makes the lexer or parser stop running if it encounters
	    // invalid input and throw a RuntimeException.
	    public void reportErrorsAsExceptions() {
	        removeErrorListeners();
	        addErrorListener(new ExceptionThrowingErrorListener());
	    }

	    private static class ExceptionThrowingErrorListener extends BaseErrorListener {
	        @Override
	        public void syntaxError(Recognizer<?, ?> recognizer,
	                Object offendingSymbol, int line, int charPositionInLine,
	                String msg, RecognitionException e) {
	            throw new RuntimeException(msg);
	        }
	    }

	public ABCMusicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TuneContext extends ParserRuleContext {
		public List<TerminalNode> END_OF_LINE() { return getTokens(ABCMusicParser.END_OF_LINE); }
		public TerminalNode EOF() { return getToken(ABCMusicParser.EOF, 0); }
		public TerminalNode END_OF_LINE(int i) {
			return getToken(ABCMusicParser.END_OF_LINE, i);
		}
		public PieceContext piece() {
			return getRuleContext(PieceContext.class,0);
		}
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public TuneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tune; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterTune(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitTune(this);
		}
	}

	public final TuneContext tune() throws RecognitionException {
		TuneContext _localctx = new TuneContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_tune);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30); header();
			setState(31); piece();
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==END_OF_LINE) {
				{
				{
				setState(32); match(END_OF_LINE);
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PieceContext extends ParserRuleContext {
		public MusicContext music() {
			return getRuleContext(MusicContext.class,0);
		}
		public List<TerminalNode> END_OF_LINE() { return getTokens(ABCMusicParser.END_OF_LINE); }
		public TerminalNode END_OF_LINE(int i) {
			return getToken(ABCMusicParser.END_OF_LINE, i);
		}
		public PieceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_piece; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterPiece(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitPiece(this);
		}
	}

	public final PieceContext piece() throws RecognitionException {
		PieceContext _localctx = new PieceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_piece);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(40); music();
			setState(44);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(41); match(END_OF_LINE);
					}
					} 
				}
				setState(46);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode LENGTH(int i) {
			return getToken(ABCMusicParser.LENGTH, i);
		}
		public List<TerminalNode> END_OF_LINE() { return getTokens(ABCMusicParser.END_OF_LINE); }
		public List<TerminalNode> F_METER() { return getTokens(ABCMusicParser.F_METER); }
		public List<TerminalNode> VOICE() { return getTokens(ABCMusicParser.VOICE); }
		public TerminalNode F_METER(int i) {
			return getToken(ABCMusicParser.F_METER, i);
		}
		public TerminalNode NUMBER() { return getToken(ABCMusicParser.NUMBER, 0); }
		public List<TerminalNode> COMPOSER() { return getTokens(ABCMusicParser.COMPOSER); }
		public TerminalNode VOICE(int i) {
			return getToken(ABCMusicParser.VOICE, i);
		}
		public List<TerminalNode> F_TEMPO() { return getTokens(ABCMusicParser.F_TEMPO); }
		public List<TerminalNode> COMMENT() { return getTokens(ABCMusicParser.COMMENT); }
		public TerminalNode END_OF_LINE(int i) {
			return getToken(ABCMusicParser.END_OF_LINE, i);
		}
		public TerminalNode COMMENT(int i) {
			return getToken(ABCMusicParser.COMMENT, i);
		}
		public TerminalNode F_TEMPO(int i) {
			return getToken(ABCMusicParser.F_TEMPO, i);
		}
		public List<TerminalNode> LENGTH() { return getTokens(ABCMusicParser.LENGTH); }
		public TerminalNode F_KEY() { return getToken(ABCMusicParser.F_KEY, 0); }
		public TerminalNode TITLE() { return getToken(ABCMusicParser.TITLE, 0); }
		public TerminalNode COMPOSER(int i) {
			return getToken(ABCMusicParser.COMPOSER, i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); match(NUMBER);
			setState(48); match(TITLE);
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMPOSER) | (1L << LENGTH) | (1L << VOICE) | (1L << F_METER) | (1L << F_TEMPO) | (1L << COMMENT) | (1L << END_OF_LINE))) != 0)) {
				{
				{
				setState(49);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMPOSER) | (1L << LENGTH) | (1L << VOICE) | (1L << F_METER) | (1L << F_TEMPO) | (1L << COMMENT) | (1L << END_OF_LINE))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(55); match(F_KEY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MusicContext extends ParserRuleContext {
		public List<TerminalNode> END_OF_LINE() { return getTokens(ABCMusicParser.END_OF_LINE); }
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public TerminalNode END_OF_LINE(int i) {
			return getToken(ABCMusicParser.END_OF_LINE, i);
		}
		public MusicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_music; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterMusic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitMusic(this);
		}
	}

	public final MusicContext music() throws RecognitionException {
		MusicContext _localctx = new MusicContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_music);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(58); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(57); line();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(60); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			setState(65);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(62); match(END_OF_LINE);
					}
					} 
				}
				setState(67);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public TerminalNode BARLINE() { return getToken(ABCMusicParser.BARLINE, 0); }
		public List<MeasureContext> measure() {
			return getRuleContexts(MeasureContext.class);
		}
		public List<TerminalNode> END_OF_LINE() { return getTokens(ABCMusicParser.END_OF_LINE); }
		public TerminalNode COMMENT() { return getToken(ABCMusicParser.COMMENT, 0); }
		public TerminalNode VOICE() { return getToken(ABCMusicParser.VOICE, 0); }
		public TerminalNode LYRIC() { return getToken(ABCMusicParser.LYRIC, 0); }
		public TerminalNode END_OF_LINE(int i) {
			return getToken(ABCMusicParser.END_OF_LINE, i);
		}
		public MeasureContext measure(int i) {
			return getRuleContext(MeasureContext.class,i);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitLine(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_line);
		int _la;
		try {
			int _alt;
			setState(97);
			switch (_input.LA(1)) {
			case VOICE:
			case ACCIDENTAL:
			case BASE_NOTE:
			case REST:
			case DUPLET_SPEC:
			case TRIPLET_SPEC:
			case QUADRUPLET_SPEC:
			case BARLINE:
			case OPENPAREN:
			case NTH_REPEAT:
			case COMMENT:
			case WHITESPACE:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				_la = _input.LA(1);
				if (_la==COMMENT) {
					{
					setState(68); match(COMMENT);
					}
				}

				setState(72);
				_la = _input.LA(1);
				if (_la==VOICE) {
					{
					setState(71); match(VOICE);
					}
				}

				setState(75);
				_la = _input.LA(1);
				if (_la==BARLINE) {
					{
					setState(74); match(BARLINE);
					}
				}

				setState(78); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(77); measure();
					}
					}
					setState(80); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ACCIDENTAL) | (1L << BASE_NOTE) | (1L << REST) | (1L << DUPLET_SPEC) | (1L << TRIPLET_SPEC) | (1L << QUADRUPLET_SPEC) | (1L << OPENPAREN) | (1L << NTH_REPEAT) | (1L << WHITESPACE))) != 0) );
				setState(82); match(END_OF_LINE);
				setState(84);
				_la = _input.LA(1);
				if (_la==LYRIC) {
					{
					setState(83); match(LYRIC);
					}
				}

				setState(89);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(86); match(END_OF_LINE);
						}
						} 
					}
					setState(91);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				}
				}
				break;
			case END_OF_LINE:
				enterOuterAlt(_localctx, 2);
				{
				setState(93); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(92); match(END_OF_LINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(95); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				} while ( _alt!=2 && _alt!=-1 );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MeasureContext extends ParserRuleContext {
		public TerminalNode BARLINE() { return getToken(ABCMusicParser.BARLINE, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(ABCMusicParser.WHITESPACE); }
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public TerminalNode WHITESPACE(int i) {
			return getToken(ABCMusicParser.WHITESPACE, i);
		}
		public MeasureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_measure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterMeasure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitMeasure(this);
		}
	}

	public final MeasureContext measure() throws RecognitionException {
		MeasureContext _localctx = new MeasureContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_measure);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(100); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(99); element();
				}
				}
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ACCIDENTAL) | (1L << BASE_NOTE) | (1L << REST) | (1L << DUPLET_SPEC) | (1L << TRIPLET_SPEC) | (1L << QUADRUPLET_SPEC) | (1L << OPENPAREN) | (1L << NTH_REPEAT) | (1L << WHITESPACE))) != 0) );
			setState(104); match(BARLINE);
			setState(108);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(105); match(WHITESPACE);
					}
					} 
				}
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public Note_or_restContext note_or_rest() {
			return getRuleContext(Note_or_restContext.class,0);
		}
		public TerminalNode NTH_REPEAT() { return getToken(ABCMusicParser.NTH_REPEAT, 0); }
		public TerminalNode WHITESPACE() { return getToken(ABCMusicParser.WHITESPACE, 0); }
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitElement(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_element);
		try {
			setState(114);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111); note_or_rest();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112); match(NTH_REPEAT);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113); match(WHITESPACE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Note_or_restContext extends ParserRuleContext {
		public Rest_elementContext rest_element() {
			return getRuleContext(Rest_elementContext.class,0);
		}
		public Note_elementContext note_element() {
			return getRuleContext(Note_elementContext.class,0);
		}
		public TupletContext tuplet() {
			return getRuleContext(TupletContext.class,0);
		}
		public ChordContext chord() {
			return getRuleContext(ChordContext.class,0);
		}
		public Note_or_restContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_note_or_rest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterNote_or_rest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitNote_or_rest(this);
		}
	}

	public final Note_or_restContext note_or_rest() throws RecognitionException {
		Note_or_restContext _localctx = new Note_or_restContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_note_or_rest);
		try {
			setState(120);
			switch (_input.LA(1)) {
			case ACCIDENTAL:
			case BASE_NOTE:
			case WHITESPACE:
				enterOuterAlt(_localctx, 1);
				{
				setState(116); note_element();
				}
				break;
			case REST:
				enterOuterAlt(_localctx, 2);
				{
				setState(117); rest_element();
				}
				break;
			case DUPLET_SPEC:
			case TRIPLET_SPEC:
			case QUADRUPLET_SPEC:
				enterOuterAlt(_localctx, 3);
				{
				setState(118); tuplet();
				}
				break;
			case OPENPAREN:
				enterOuterAlt(_localctx, 4);
				{
				setState(119); chord();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Note_elementContext extends ParserRuleContext {
		public TerminalNode OCTAVE() { return getToken(ABCMusicParser.OCTAVE, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(ABCMusicParser.WHITESPACE); }
		public TerminalNode ACCIDENTAL() { return getToken(ABCMusicParser.ACCIDENTAL, 0); }
		public TerminalNode BASE_NOTE() { return getToken(ABCMusicParser.BASE_NOTE, 0); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(ABCMusicParser.WHITESPACE, i);
		}
		public TerminalNode DURATION() { return getToken(ABCMusicParser.DURATION, 0); }
		public Note_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_note_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterNote_element(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitNote_element(this);
		}
	}

	public final Note_elementContext note_element() throws RecognitionException {
		Note_elementContext _localctx = new Note_elementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_note_element);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_la = _input.LA(1);
			if (_la==ACCIDENTAL) {
				{
				setState(122); match(ACCIDENTAL);
				}
			}

			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE) {
				{
				{
				setState(125); match(WHITESPACE);
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131); match(BASE_NOTE);
			setState(135);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(132); match(WHITESPACE);
					}
					} 
				}
				setState(137);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			}
			setState(139);
			_la = _input.LA(1);
			if (_la==OCTAVE) {
				{
				setState(138); match(OCTAVE);
				}
			}

			setState(144);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,21,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(141); match(WHITESPACE);
					}
					} 
				}
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,21,_ctx);
			}
			setState(148);
			_la = _input.LA(1);
			if (_la==DURATION) {
				{
				setState(147); match(DURATION);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rest_elementContext extends ParserRuleContext {
		public List<TerminalNode> WHITESPACE() { return getTokens(ABCMusicParser.WHITESPACE); }
		public TerminalNode REST() { return getToken(ABCMusicParser.REST, 0); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(ABCMusicParser.WHITESPACE, i);
		}
		public TerminalNode DURATION() { return getToken(ABCMusicParser.DURATION, 0); }
		public Rest_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rest_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterRest_element(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitRest_element(this);
		}
	}
